--- a/includes/automation/buttons.yaml
+++ b/includes/automation/buttons.yaml
@@ -16,7 +16,7 @@
     event_type: click
     event_data:
       entity_id: binary_sensor.switch_158d0001a21086
-      click_type: single
+      click_type: both
   action:
   - service: light.toggle
     entity_id: light.trent_bedside
@@ -36,3 +36,20 @@
       click_type: hold
   action:
   - service: script.good_night
+
+############################################################
+#
+# Bed Room Button - Turn Rachel Bedside Lamp on
+#
+############################################################
+
+- alias: Bed Room Button - Rachel Bedside Lamp toggle
+  trigger:
+  - platform: event
+    event_type: click
+    event_data:
+      entity_id: binary_sensor.switch_158d000186e632
+      click_type: both
+  action:
+  - service: light.toggle
+    entity_id: light.rachel_bedside
