--- a/includes/automation/hide_mediaplayers.yaml
+++ b/includes/automation/hide_mediaplayers.yaml
@@ -3,13 +3,13 @@
 # Hide Media Players when not being used.
 #
 ############################################################
-  
+
 ############################################################
 #
 # Media Player Living Room Home
 #
 ############################################################
-  
+
 # Hide Media Player
 
 - alias: 'Hide media_player.living_room_home while not playing'
@@ -49,7 +49,7 @@
 # Media Player Living Room TV
 #
 ############################################################
-  
+
 # Hide Media Player
 
 - alias: 'Hide media_player.tv_ua55ju6400 while not playing'
@@ -89,7 +89,7 @@
 # Media Player Living Room
 #
 ############################################################
-  
+
 # Hide Media Player
 
 - alias: 'Hide media_player.living_room while not playing'
@@ -129,7 +129,7 @@
 # Media Player Bed Room
 #
 ############################################################
-  
+
 # Hide Media Player
 
 - alias: 'Hide media_player.bed_room while not playing'
@@ -164,12 +164,53 @@
     entity_id: group.media_bed_room
     data:
       visible: True
+
+############################################################
+#
+# Media Player Bed Room Speaker
+#
+############################################################
+
+# Hide Media Player
+
+- alias: 'Hide media_player.bedroom_speaker while not playing'
+  hide_entity: true
+  trigger:
+  - platform: homeassistant
+    event: start
+  - platform: state
+    entity_id: media_player.bedroom_speaker
+    to: 'idle'
+  - platform: state
+    entity_id: media_player.bedroom_speaker
+    to: 'off'
+  action:
+  - service: group.set_visibility
+    entity_id: group.media_bed_room
+    data:
+      visible: False
+# Show Media Player
+
+- alias: 'Show media_player.bedroom_speaker while playing'
+  hide_entity: true
+  trigger:
+  - platform: state
+    entity_id: media_player.bedroom_speaker
+    to: 'playing'
+  - platform: state
+    entity_id: media_player.bedroom_speaker
+    to: 'paused'
+  action:
+  - service: group.set_visibility
+    entity_id: group.media_bed_room
+    data:
+      visible: True
 ############################################################
 #
 # Media Player Outside
 #
 ############################################################
-  
+
 # Hide Media Player
 
 - alias: 'Hide media_player.outside while not playing'
@@ -209,7 +250,7 @@
 # Media Player Spotify
 #
 ############################################################
-  
+
 # Hide Media Player
 
 - alias: 'Hide media_player.spotify while not playing'
