--- a/includes/customize.yaml
+++ b/includes/customize.yaml
@@ -70,7 +70,7 @@ sensor.washing_machine_status:
 switch.plug_158d0001debe7a:
   friendly_name: Washing Machine Switch
 binary_sensor.switch_158d00016449a2:
-  friendly_name: Laundry Switch
+  friendly_name: Spare Switch
 binary_sensor.switch_158d0001a21086:
   friendly_name: Bedroom Switch
 binary_sensor.door_window_sensor_158d000186f0ec:
@@ -79,6 +79,16 @@ binary_sensor.door_window_sensor_158d000186f0ec:
 binary_sensor.door_window_sensor_158d00019f3211:
   friendly_name: Front Door Sensor
   icon: mdi:door
+binary_sensor.door_window_sensor_158d0001d7acfc:
+  friendly_name: Bedroom Window Sensor
+binary_sensor.door_window_sensor_158d0001e037dc:
+  friendly_name: Living Room Window Sensor 1
+binary_sensor.door_window_sensor_158d00019fbe38:
+  friendly_name: Living Room Window Sensor 2
+binary_sensor.door_window_sensor_158d0001a4a872:
+  friendly_name: Living Room Window Sensor 3
+binary_sensor.door_window_sensor_158d00019f886a:
+  friendly_name: Washing Machine Door Sensor
 binary_sensor.motion_sensor_158d000165627b:
   friendly_name: Hallway Motion
 sensor.fibaro_system_fgms001zw5_motion_sensor_temperature:
