--- a/includes/group.yaml
+++ b/includes/group.yaml
@@ -50,8 +50,7 @@ info_view:
     - group.multisensor
     - group.trash_schedule
     - group.recycle_schedule
-    - group.date
-    - group.date_time
+    - group.speech_functions
     # Groups
 weather:
   name: Weather
@@ -206,8 +205,7 @@ automation_override:
     - input_boolean.guest_mode
     - input_boolean.alert_mode
     - input_boolean.speech_notifications
-    - input_boolean.lastmsg
-    - switch.air_conditioner
+    - input_boolean.trash_reminders
     - input_boolean.disable_auto_living_room_lamp
     - input_boolean.disable_media_player_light_control
     - input_boolean.disable_current_temperature_notification
@@ -218,6 +216,11 @@ automation_override:
     - input_boolean.disable_washing_machine_notification
     - input_boolean.disable_entry_light_trent_home
     - input_boolean.disable_entryway_light_frontdoor
+speech_functions:
+  name: Speech Functions
+  entities:
+    - input_boolean.lastmsg
+    - switch.air_conditioner
 mediaplayer_dimmer_livingroom:
   name: Media Player Dimmer - Living Room
   entities:
