--- a/includes/script.yaml
+++ b/includes/script.yaml
@@ -69,7 +69,7 @@ speech_processing:
   sequence:
     - service: mqtt.publish
       data_template:
-        topic: 'polly/lastmsg'
+        topic: 'broadcast/lastmsg'
         payload: 'This Message is from {{now().strftime("%I")}}:{{now().strftime("%M")}} {{now().strftime("%p")}}. {{speech_message}}'
         retain: true
 
@@ -95,17 +95,9 @@ speech_processing:
           entity_id: input_boolean.speech_notifications
           state: 'on'
 
-    - service: tts.amazon_polly_say
-      entity_id:
-        - media_player.living_room_home
-        - media_player.bedroom_speaker
+    - service: notify.google_assistant_broadcast
       data_template:
-        message: >
-          <speak>
-          {{speech_message}}
-          </speak>
-        cache: true
-
+        message: '{{speech_message}}'
     - service: input_boolean.turn_off
       entity_id:
         - input_boolean.alert_mode
