Updated Travis CI

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -24,7 +24,7 @@ terminal_url: http://0.0.0.0
 
 
 xiaomi_vacuum_ip: 0.0.0.0
-xiaomi_vacuum_token: 123456789
+xiaomi_vacuum_token: 30077ed49c58a7239561b0a315338f74
 
 broadlink_sw1_ip: 0.0.0.0
 broadlink_sw2_ip: 0.0.0.0
@@ -35,9 +35,9 @@ broadlink_rm1_ip: 0.0.0.0
 harmony_ip: 0.0.0.0
 harmony_name: fakename
 
-study_desk_lamp_light_ip: 0.0.0.0
-rachel_bedside_light_ip: 0.0.0.0
-trent_bedside_light_ip: 0.0.0.0
+study_desk_lamp_light_ip: 0.0.0.1
+rachel_bedside_light_ip: 0.0.0.2
+trent_bedside_light_ip: 0.0.0.3
 
 spotify_client_id: 123456789
 spotify_client_secret: 123456789
@@ -91,8 +91,8 @@ sensor_synology_username: fakeusername
 sensor_synology_password: fakepassword
 
 # Xiaomi Gateway
-xiaomikey: 123456789
-xiaomimac: 0000000000
+xiaomikey: 123456789TEYDGSH
+xiaomimac: 88FC494A8EAF
 
 # Onvif
 
