--- a/floorplan.yaml
+++ b/floorplan.yaml
@@ -70,7 +70,7 @@
             '
         - name: Text Sensors
           entities:
-             - device_tracker.hauser_trent
+             - device_tracker.trents_galaxy
              - device_tracker.2c8a72bbc83c
              - sensor.time
              - sensor.date
