--- a/includes/logbook.yaml
+++ b/includes/logbook.yaml
@@ -6,8 +6,8 @@
 
 include:
   entities:
-    - device_tracker.trent_trent
-    - device_tracker.androide14fdffea99b53a1
+    - device_tracker.trents_galaxy
+    - device_tracker.rachels_iphone
     - sensor.speedtest_ping
     - sensor.speedtest_download
     - sensor.speedtest_upload
