--- a/includes/automation/weather_notification.yaml
+++ b/includes/automation/weather_notification.yaml
@@ -14,7 +14,7 @@
     entity_id: input_boolean.disable_morning_notification
     state: 'off'
   action:
-  - service: notify.html5_trent_galaxys8
+  - service: notify.trent
     data:
       message: "Good morning! Forecast: {{ states('sensor.melbourne_summary') }}, temp {{ states('sensor.weather_min') }} - {{ states('sensor.weather_max') }}°c  {{ states('sensor.melbourne_uv_forecast') }} Next line: {{ states('sensor.melbourne_forecast_line3') }} Now: {{ states('sensor.owm_temperature') }}°c {{ states('sensor.owm_condition') }}, {{ states('sensor.owm_rain') }}"  
 
@@ -29,6 +29,6 @@
     entity_id: input_boolean.disable_afternoon_notification
     state: 'off'
   action:
-  - service: notify.html5_trent_galaxys8
+  - service: notify.trent
     data:
       message: "The sun has set. Forecast: {{ states('sensor.melbourne_summary') }}, temp {{ states('sensor.weather_min') }} - {{ states('sensor.weather_max') }}°c  Now: {{ states('sensor.owm_temperature') }}°c {{ states('sensor.owm_condition') }}, {{ states('sensor.owm_rain') }}"
