--- a/packages/xiaomi_robot_vacuum.yaml
+++ b/packages/xiaomi_robot_vacuum.yaml
@@ -8,6 +8,8 @@ homeassistant:
   customize:
     input_boolean.disable_daily_vacuum:
       icon: mdi:stop-circle-outline
+    input_boolean.disable_dustbin_notification:
+      icon: mdi:delete-empty
 
 group:
   Robot Vacuum:
@@ -26,6 +28,9 @@ input_boolean:
     initial: off
   disable_daily_vacuum:
     name: Disable Daily Vacuum Automation
+    initial: off
+  disable_dustbin_notification:
+    name: Disable Dustbin Notification
     initial: off
 
 
@@ -97,6 +102,9 @@ automation:
           {% else %}
           false
           {% endif %}
+      - condition: state
+        entity_id: input_boolean.disable_dustbin_notification
+        state: 'off'
     action:
       - service: script.speech_processing
         data_template:
